<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:id="@+id/vgContainer"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        >
            <ImageButton
                    android:id="@+id/icClose"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="?attr/actionBarItemBackground"
                    app:srcCompat="@drawable/ic_close"
                    app:tint="@color/colorAccentGreen1"
                    android:layout_gravity="end"
            />
            <ImageView
                    android:layout_width="173dp"
                    android:layout_height="98dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_splash_logo"
            />
            <TextView
                    android:id="@+id/tvListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlack"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="22sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/auth_title"
            />
            <pro.midev.ponyexpress.ui.views.PonyInputView
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
            />
            <pro.midev.ponyexpress.ui.views.PonyInputView
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
            />
            <TextView
                    android:id="@+id/rememberPassword"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextGreen1"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:text="@string/remember_password"
            />
            <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/remember_me"
                    style="@style/CheckBox"
            />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_login"
                    style="@style/ButtonSolid"
                    android:enabled="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="38dp"
            />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextBlack40"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"

                android:text="@string/auth_has_account"
        />
        <TextView
                android:id="@+id/openReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen1"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:text="@string/auth_go_to_reg"
        />
    </LinearLayout>
</FrameLayout>