<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorAccentBG"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <pro.midev.ponyexpress.ui.views.ToolbarView
                android:id="@+id/vToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSub"
                android:text="@string/settings_addresses_name"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextNormal"
                android:text="Дом"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
        />
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccentGrey1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSub"
                android:text="@string/settings_addresses_address"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextNormal"
                android:text="Россия, Санкт-Петербург, ул. Дальняя, д. 12, кв. 24"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
        />
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccentGrey1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSub"
                android:text="@string/settings_addresses_contact"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextNormal"
                android:text="Краснопёров Емельян Игоревич"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
        />
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccentGrey1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextSub"
                android:text="@string/settings_addresses_phone"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextNormal"
                android:text="+7 789 456-45-23"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
        />
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccentGrey1"
                android:layout_marginTop="10dp"
        />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/vgButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:background="@drawable/shape_top_border"
    >
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOpenMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_addresses_edit"
                style="@style/ButtonSolid"
                android:layout_marginBottom="8dp"
        />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_addresses_remove"
                style="@style/ButtonEmptyRed"
        />
    </LinearLayout>
</FrameLayout>