<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:background="@color/colorAccentBG"
>
    <pro.midev.ponyexpress.ui.views.ToolbarView
            android:id="@+id/vToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        >
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/vgNotAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorAccentWhite"
                    app:cardCornerRadius="16dp"
                    android:layout_margin="16dp"
                    app:cardElevation="5dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextBlack40"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="14sp"
                            android:gravity="center"
                            android:text="@string/orders_not_auth"
                    />
                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@id/btnAuth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Авторизоваться"
                            style="@style/ButtonEmpty"
                            android:layout_marginTop="16dp"
                    />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/vgAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorAccentWhite"
                    app:cardCornerRadius="16dp"
                    android:layout_margin="16dp"
                    app:cardElevation="5dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                >
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                    >

                    </LinearLayout>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorAccentGrey1"/>
                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnAddresses"
                            android:text="@string/settings_btn_addresses"
                            android:drawableStart="@drawable/ic_addresses"
                            style="@style/ButtonSettings"
                    />
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorAccentGrey1"/>
                    <androidx.appcompat.widget.AppCompatButton
                            android:text="@string/settings_btn_plan"
                            android:drawableStart="@drawable/ic_schemes"
                            style="@style/ButtonSettings"
                    />
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorAccentGrey1"/>
                    <androidx.appcompat.widget.AppCompatButton
                            android:text="@string/settings_btn_for_go"
                            android:drawableStart="@drawable/ic_for_go"
                            style="@style/ButtonSettings"
                    />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorAccentWhite"
                    app:cardCornerRadius="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardElevation="5dp"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                >
                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnFeedback"
                            android:text="@string/settings_btn_help"
                            android:drawableStart="@drawable/ic_comments"
                            style="@style/ButtonSettings"
                    />
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorAccentGrey1"/>
                    <androidx.appcompat.widget.AppCompatButton
                            android:text="@string/settings_btn_coll"
                            android:drawableStart="@drawable/ic_phone"
                            style="@style/ButtonSettings"
                    />
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorAccentGrey1"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAboutApplication"
                        style="@style/ButtonSettings"
                        android:drawableStart="@drawable/ic_exclamation"
                        android:text="@string/settings_btn_info" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlack"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/settings_help_title"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
            >
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_vk"
                        android:layout_marginEnd="24dp"
                />
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_facebook"
                        android:layout_marginEnd="24dp"
                />
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_telegram"
                />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>