<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:id="@+id/vgContainer"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        >
            <ImageButton
                    android:id="@+id/icClose"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="?attr/actionBarItemBackground"
                    app:srcCompat="@drawable/ic_arrow_left"
                    app:tint="@color/colorAccentGreen1"
                    android:layout_gravity="start"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlack"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="24sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/auth_reg_title"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlack40"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/auth_reg_subtitle"
            />
            <pro.midev.ponyexpress.ui.views.PonyInputView
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:gravity="top"
            >
                <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBox"
                />
                <TextView
                        android:id="@+id/linkText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/auth_reg_phone_checkbox"
                        android:textColor="@color/colorTextBlack"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="14sp"
                />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_reg_send_code"
                    style="@style/ButtonSolid"
                    android:enabled="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="38dp"
            />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>