<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:background="@color/colorAccentBG"
>
    <pro.midev.ponyexpress.ui.views.ToolbarView
            android:id="@+id/vToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <FrameLayout
            android:id="@+id/vgMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <androidx.core.widget.NestedScrollView
                android:id="@+id/nested"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="64dp"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
            >
                <pro.midev.ponyexpress.ui.views.PonyInputView
                        android:id="@+id/etMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />
                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/ButtonEmpty"
                        android:text="@string/settings_feedback_add_file"
                        android:layout_marginTop="16dp"
                />
                <TextView
                        android:layout_marginTop="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_feedback_email_title"
                        android:textColor="@color/colorTextBlack"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="15sp"
                />
                <TextView
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_feedback_email_message"
                        android:textColor="@color/colorTextBlack"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="15sp"
                />
                <pro.midev.ponyexpress.ui.views.PonyInputView
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonSolid"
                android:enabled="false"
                android:text="@string/settings_feedback_add_file"
                android:layout_margin="16dp"
                android:layout_gravity="bottom"
                android:elevation="2dp"
        />
    </FrameLayout>
</LinearLayout>